--- a/CrazyflieBeta/package.xml
+++ b/CrazyflieBeta/package.xml
@@ -64,6 +64,7 @@
   <build_depend>rotors_gazebo_plugins</build_depend>
   <build_depend>rotors_joy_interface</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>message_generation</build_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>mav_msgs</build_export_depend>
   <build_export_depend>mav_planning_msgs</build_export_depend>
@@ -79,6 +80,7 @@
   <build_export_depend>rotors_gazebo_plugins</build_export_depend>
   <build_export_depend>rotors_joy_interface</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
+  <build_export_depend>message_runtime</build_export_depend>
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>mav_msgs</exec_depend>
   <exec_depend>mav_planning_msgs</exec_depend>
@@ -94,6 +96,7 @@
   <exec_depend>rotors_gazebo_plugins</exec_depend>
   <exec_depend>rotors_joy_interface</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <exec_depend>message_runtime</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
