--- a/crazyCmd/CMakeLists.txt
+++ b/crazyCmd/CMakeLists.txt
@@ -12,6 +12,9 @@ find_package(catkin REQUIRED COMPONENTS
   rospy
   geometry_msgs
   crazy_common_py
+  mav_msgs
+  trajectory_msgs
+  crazyflie_messages
 )
 
 ## System dependencies are found with CMake's conventions
@@ -134,7 +137,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/crazyCmd_node.cpp)
+add_executable(crazyflie_sim_manager src/crazyflie_sim_manager.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -144,12 +147,12 @@ include_directories(
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
-# add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(crazyflie_sim_manager ${crazyflie_sim_manager_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-# target_link_libraries(${PROJECT_NAME}_node
-#   ${catkin_LIBRARIES}
-# )
+target_link_libraries(crazyflie_sim_manager
+    ${catkin_LIBRARIES}
+)
 
 #############
 ## Install ##
