--- a/crazyflie_messages/CMakeLists.txt
+++ b/crazyflie_messages/CMakeLists.txt
@@ -51,15 +51,17 @@ find_package(catkin REQUIRED COMPONENTS
 add_message_files(
     FILES
     RollPitchYaw.msg
+    CustomTrajectoryPointYaw_msg.msg
+    Takeoff_msg.msg
 
 )
 
 ## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
-#   Service1.srv
-#   Service2.srv
-# )
+add_service_files(
+    FILES
+    CustomTrajectoryPointYaw_srv.srv
+    Takeoff_srv.srv
+)
 
 ## Generate actions in the 'action' folder
 # add_action_files(
