--- a/crazyCmd/package.xml
+++ b/crazyCmd/package.xml
@@ -56,6 +56,7 @@
   <build_depend>mav_msgs</build_depend>
   <build_depend>trajectory_msgs</build_depend>
   <build_depend>crazyflie_messages</build_depend>
+  <build_depend>rotors_control</build_depend>
 
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
@@ -64,6 +65,7 @@
   <build_export_depend>mav_msgs</build_export_depend>
   <build_export_depend>trajectory_msgs</build_export_depend>
   <build_export_depend>crazyflie_messages</build_export_depend>
+  <build_export_depend>rotors_control</build_export_depend>
 
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
@@ -72,6 +74,7 @@
   <exec_depend>mav_msgs</exec_depend>
   <exec_depend>trajectory_msgs</exec_depend>
   <exec_depend>crazyflie_messages</exec_depend>
+  <exec_depend>rotors_control</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
