--- a/crazyflie_description/config/config.yaml
+++ b/crazyflie_description/config/config.yaml
@@ -3,7 +3,29 @@ cf1:
     type: joint_state_controller/JointStateController
     publish_rate: 50
 
-  crazyflie_M1_joint_position_controller:
-    type: effort_controllers/JointPositionController
+  crazyflie_M1_joint_velocity_controller:
+    type: velocity_controllers/JointVelocityController
     joint: crazyflie_M1_joint
-    pid: {p: 1.0, i: 1.0, d: 0.0}
+    pid: {p: 1.0, i: 1.0, d: 0.0, i_clamp: 100.0}
+
+  crazyflie_M2_joint_velocity_controller:
+    type: velocity_controllers/JointVelocityController
+    joint: crazyflie_M2_joint
+    pid: { p: 1.0, i: 1.0, d: 0.0, i_clamp: 100.0 }
+
+  crazyflie_M3_joint_velocity_controller:
+    type: velocity_controllers/JointVelocityController
+    joint: crazyflie_M3_joint
+    pid: { p: 1.0, i: 1.0, d: 0.0, i_clamp: 100.0 }
+
+  crazyflie_M4_joint_velocity_controller:
+    type: velocity_controllers/JointVelocityController
+    joint: crazyflie_M4_joint
+    pid: { p: 1.0, i: 1.0, d: 0.0, i_clamp: 100.0 }
+
+  #gazebo_ros_control:
+    #pid_gains:
+      #crazyflie_M1_joint:
+        #p: 1.0
+        #i: 0.01
+        #d: 10.0
