Developed Position & Velocity pids for virtual crazyflie

--- a/crazy_common_py/CMakeLists.txt
+++ b/crazy_common_py/CMakeLists.txt
@@ -10,6 +10,9 @@ project(crazy_common_py)
 find_package(catkin REQUIRED COMPONENTS
   rospy
   std_msgs
+  sensor_msgs
+  geometry_msgs
+  nav_msgs
 )
 
 ## System dependencies are found with CMake's conventions
