--- a/crazyflie_description/package.xml
+++ b/crazyflie_description/package.xml
@@ -55,6 +55,8 @@
   <build_depend>gazebo_ros</build_depend>
   <build_depend>joint_state_publisher</build_depend>
   <build_depend>robot_state_publisher</build_depend>
+  <build_depend>sensor_msgs</build_depend>
+  <build_depend>nav_msgs</build_depend>
 
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>rviz</build_export_depend>
@@ -62,6 +64,8 @@
   <build_export_depend>gazebo_ros</build_export_depend>
   <build_export_depend>joint_state_publisher</build_export_depend>
   <build_export_depend>robot_state_publisher</build_export_depend>
+  <build_export_depend>sensor_msgs</build_export_depend>
+  <build_export_depend>nav_msgs</build_export_depend>
 
 
   <exec_depend>rospy</exec_depend>
@@ -70,6 +74,8 @@
   <exec_depend>gazebo_ros</exec_depend>
   <exec_depend>joint_state_publisher</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
+  <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>nav_msgs</exec_depend>
 
 
 
