--- a/crazy_common_py/CMakeLists.txt
+++ b/crazy_common_py/CMakeLists.txt
@@ -13,6 +13,7 @@ find_package(catkin REQUIRED COMPONENTS
   sensor_msgs
   geometry_msgs
   nav_msgs
+  gazebo_msgs
 )
 
 ## System dependencies are found with CMake's conventions
