--- a/crazyCmd/CMakeLists.txt
+++ b/crazyCmd/CMakeLists.txt
@@ -138,7 +138,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-add_executable(crazyflie_sim_manager src/crazyflie_sim_manager.cpp)
+# add_executable(crazyflie_sim_manager src/crazyflie_sim_manager.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -148,12 +148,12 @@ add_executable(crazyflie_sim_manager src/crazyflie_sim_manager.cpp)
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
-add_dependencies(crazyflie_sim_manager ${crazyflie_sim_manager_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+#add_dependencies(crazyflie_sim_manager ${crazyflie_sim_manager_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-target_link_libraries(crazyflie_sim_manager
-    ${catkin_LIBRARIES}
-)
+#target_link_libraries(crazyflie_sim_manager
+#    ${catkin_LIBRARIES}
+#)
 
 #############
 ## Install ##
