--- a/crazyflie_messages/CMakeLists.txt
+++ b/crazyflie_messages/CMakeLists.txt
@@ -13,6 +13,7 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   message_generation
   mav_msgs
+  actionlib_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -53,7 +54,6 @@ add_message_files(
     FILES
     RollPitchYaw.msg
     CustomTrajectoryPointYaw_msg.msg
-    Takeoff_msg.msg
     CrazyflieState.msg
     Position.msg
     Attitude.msg
@@ -71,16 +71,16 @@ add_service_files(
 )
 
 ## Generate actions in the 'action' folder
-# add_action_files(
-#   FILES
-#   Action1.action
-#   Action2.action
-# )
+add_action_files(
+    FILES
+    Takeoff.action
+)
 
 ## Generate added messages and services with any dependencies listed here
 generate_messages(
     DEPENDENCIES
     geometry_msgs#   std_msgs
+    actionlib_msgs
 )
 
 ################################################
