--- a/crazyflie_messages/CMakeLists.txt
+++ b/crazyflie_messages/CMakeLists.txt
@@ -74,6 +74,7 @@ add_service_files(
 add_action_files(
     FILES
     Takeoff.action
+    Destination3D.action
 )
 
 ## Generate added messages and services with any dependencies listed here
