Modified flocking logic, now: Pyramid swarm publishes a vector collecting all states => reduction of number of topics per node.

--- a/crazyflie_messages/CMakeLists.txt
+++ b/crazyflie_messages/CMakeLists.txt
@@ -58,6 +58,7 @@ add_message_files(
     Position.msg
     Attitude.msg
     KeyboardKeys.msg
+    SwarmStates.msg
 )
 
 ## Generate services in the 'srv' folder
