Fixed cmakelists file for crazyflie_messages

--- a/crazyflie_messages/CMakeLists.txt
+++ b/crazyflie_messages/CMakeLists.txt
@@ -119,7 +119,7 @@ generate_messages(
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES crazyflie_messages
-    CATKIN_DEPENDS geometry_msgs rospy std_msgs message_runtime mav_msgs
+    CATKIN_DEPENDS geometry_msgs rospy std_msgs message_runtime
 #  DEPENDS system_lib
 )
 
